add img, add about and gallery html, add gallery css with flex grid

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -45,7 +45,7 @@
             <p>Musical instrument and electronics repair, service & modification in Austin, TX.</p>
         </section>
         <section class="reverb">
-            <a href="https://reverb.com/shop/sound-guy-envy"><img alt="Shop My Store on Reverb" src="//d1g5417jjjo7sf.cloudfront.net/assets/shops/buttons/215x65-black.png" /></a>
+            <a href="https://reverb.com/shop/sound-guy-envy" target="_blank"><img alt="Shop My Store on Reverb" src="//d1g5417jjjo7sf.cloudfront.net/assets/shops/buttons/215x65-black.png" /></a>
         </section>
     </main>
 </body>
