--- a/checkpoint-one/gallery.html
+++ b/checkpoint-one/gallery.html
@@ -11,6 +11,7 @@
     <!--stylesheets-->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/gallery.css">
 
     <!--icons and fonts-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,5 +41,57 @@
             </a>
         </div>
     </header>
+    <main>
+        <div class="row">
+            <div class="column">
+                <img src="img/69bassman.jpg" style="width:100%;">
+                <img src="img/69bassman_guts.jpg" style="width:100%;">
+                <img src="img/814_fretboardclean.jpg" style="width:100%;">
+                <img src="img/ac30_handwired.jpg" style="width:100%;">
+                <img src="img/amp_spread.jpg" style="width:100%;">
+                <img src="img/ampshop_1.jpg" style="width:100%;">
+                <img src="img/ba115_mosfet.jpg" style="width:100%;">
+                <img src="img/bassmaster_custom.jpg" style="width:100%;">
+                <img src="img/blown_signalcap.jpg" style="width:100%;">
+                <img src="img/charbroil.jpg" style="width:100%;">
+            </div>
+            <div class="column">
+                <img src="img/deville_recap.jpg" style="width:100%;">
+                <img src="img/epigibson_shootout.jpg" style="width:100%;">
+                <img src="img/fader_repair.jpg" style="width:100%;">
+                <img src="img/rane_fader.jpg" style="width:100%;">
+                <img src="img/fretpolish_1.jpg" style="width:100%;">
+                <img src="img/fretpolish_2.jpg" style="width:100%;">
+                <img src="img/gtr_wiring.jpg" style="width:100%;">
+                <img src="img/jayturser_wiring.jpg" style="width:100%;">
+                <img src="img/jcm800_demod.jpg" style="width:100%;">
+                <img src="img/jetcity_jca20h_mod.jpg" style="width:100%;">
+            </div>
+            <div class="column">
+                <img src="img/jtm45_reissue.jpg" style="width:100%;">
+                <img src="img/kool_backline.jpg" style="width:100%;">
+                <img src="img/legend_a30.jpg" style="width:100%;">
+                <img src="img/mars_custom.jpg" style="width:100%;">
+                <img src="img/matchless_dc30.jpg" style="width:100%;">
+                <img src="img/motif_psrepair.jpg" style="width:100%;">
+                <img src="img/mustang_bass_77.jpg" style="width:100%;">
+                <img src="img/peavey_classics.jpg" style="width:100%;">
+                <img src="img/pv_transtube.jpg" style="width:100%;">
+                <img src="img/rane_fader.jpg" style="width:100%;">
+            </div>
+            <div class="column">
+                <img src="img/recap_mobo.jpg" style="width:100%;">
+                <img src="img/rhodes.jpg" style="width:100%;">
+                <img src="img/silverface_bias.jpg" style="width:100%;">
+                <img src="img/silverface_guts.jpg" style="width:100%;">
+                <img src="img/stringwinding_pro.jpg" style="width:100%;">
+                <img src="img/svt_board.jpg" style="width:100%;">
+                <img src="img/svt_vintage.jpg" style="width:100%;">
+                <img src="img/tele_pro_deluxe.jpg" style="width:100%;">
+                <img src="img/telepolish_1.jpg" style="width:100%;">
+                <img src="img/trace_repair.jpg" style="width:100%;">
+            </div>
+        </div>
+    </main>
 </body>
 </html>
