Finished Check Point 1

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -15,10 +15,10 @@
 </title>
 
 <body>
-
+    <!-- Header and Navigation -->
     <header>
         <h1>
-            <img class ="logo" src="img/logo.png" alt="Company Logo">
+            <img class="logo" src="img/logo.png" alt="Company Logo">
         </h1>
         <nav>
             <div class="nav">HOME</div>
@@ -27,77 +27,73 @@
             <div class="nav">CONTACT</div>
         </nav>
     </header>
-
+    <!--End Header and Navigation -->
     <main>
-        <section>
-            <article>
-                <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                    laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                    qui officia deserunt mollit anim id est laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." "Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                    id est laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                    qui officia deserunt mollit anim id est laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." "Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                    id est laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                    qui officia deserunt mollit anim id est laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." "Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                    id est laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                    qui officia deserunt mollit anim id est laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." "Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                    id est laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                    qui officia deserunt mollit anim id est laborum."
-                </p>
-            </article>
+        <!-- This includes quote and form -->
+        <section class="primary">
+            <p class="left_primary">
+                For when you want the benefits of having a dog without any of the
+                <span>responsibility</span>
+            </p>
+            <!-- This is the form on the main page -->
+            <section class="form">
+                <section class="form1">
+                    Pick-a-Dog
+                </section>
+                <section class="form2">
+                    <article class="date_box">
+                        <input type="date" class="pickup_box" placeholder="mm/dd/yyyy">
+                        <input type="date" class="return_box" placeholder="mm/dd/yyyy">
+                    </article>
+                </section>
+                <section class="form3">
+                    <article class="dog_type">
+                        <div>
+                            <input type="text" class="breed_box" placeholder="Breed">
+                        </div>
+                        <div>
+                            <input type="text" class="size_box" placeholder="Size">
+                        </div>
+                    </article>
+                </section>
+                <section class="form4">
+                    <article class="dog_count">
+                        <div class="number_dogs">Number of Dogs</div>
+                        <div class="number_box">
+                            <div class="number_1">1</div>
+                            <div class="down">&#9661</div>
+                        </div>
+                        <div class="radio_btn">
+                            <input type="radio" name="return" value="return"> Good Dog
+                            <input type="radio" name="one" value="one-way"> Bad Dog
+                        </div>
+                    </article>
+                </section>
+                <section class="form5">
+                    <article class="search_btn">
+                        <div class="search_text">Search Doggies</div>
+                    </article>
+                </section>
+            </section>
+            <!-- End This is the form on the main page -->
         </section>
+        <!-- End This includes quote and form -->
+        <!-- Contains Pictures of Dogs -->
+        <section class="dog_pictures">
+            <div class="dog">
+                <img class="dog_img" src="img/dog1.jpg" alt="dog1">
+            </div>
+            <div class="dog">
+                <img class="dog_img" src="img/dog5.jpg" alt="dog2">
+            </div>
+            <div class="dog">
+                <img class="dog_img" src="img/dog4.jpg" alt="dog3">
+            </div>
+        </section>
+        <!-- End Contains Pictures of Dogs -->
     </main>
 
+    <!-- footer -->
     <footer>
 
         <section class="footer_sections">
@@ -126,16 +122,16 @@
                 Business
             </div>
             <div class="footer_about_list">
-                Saftey
+                Safety
             </div>
         </section>
 
         <section class="footer_sections">
             <div class="footer_header">
-                Open Posisitons
+                Open Positions
             </div>
             <div class="footer_careers_list">
-                Contact: Carreers@somecomapny.com
+                Contact: Careers@rentadog.com
             </div>
         </section>
 
@@ -153,8 +149,9 @@
                 Instagram
             </div>
         </section>
-
     </footer>
+    <!-- End footer -->
+
 </body>
 
 </html>
