--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -11,16 +11,19 @@
     <!--stylesheets-->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/gallery.css">
 
     <!--icons and fonts-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 </head>
 <body>
-    <header class="flexrow">
+    <header class="flexrow noto">
+        <!--logo-->
         <h1>
             <a class="name" href="index.html">In<span>Tune</span>Again</a>
         </h1>
+        <!--social media buttons-->
         <div class="contact">
             <ul class="flexrow">
                 <a class="fa fa-envelope" href="mailto:aaron.altounian@gmail.com" target="_blank"></a>
@@ -29,23 +32,92 @@
                 <a class="fa fa-facebook" href="http://www.facebook.com/aaronaltounian" target="_blank"></a>
             </ul>
         </div>
+        <!--nav links-->
         <div class="switches flexrow">
-            <a class="power" href="about.html">
+            <a class="power" href="#about">
                 <img src="img/power_switch.jpg">
-                <p class="imglink">About</p>
+                <p class="imglink noto">About</p>
             </a>
-            <a class="standby" href="gallery.html">
+            <a class="standby" href="#gallery">
                 <img src="img/standby_switch.jpg">
-                <p class="imglink">Gallery</p>
+                <p class="imglink noto">Gallery</p>
             </a>
         </div>
     </header>
     <main>
-        <section class="blurb">
+        <section class="blurb noto">
             <p>Musical instrument and electronics repair, service & modification in Austin, TX.</p>
         </section>
         <section class="reverb">
             <a href="https://reverb.com/shop/sound-guy-envy" target="_blank"><img alt="Shop My Store on Reverb" src="//d1g5417jjjo7sf.cloudfront.net/assets/shops/buttons/215x65-black.png" /></a>
+        </section>
+        <!--About me-->
+        <section id="about" class="noto">
+            <h1>Services</h1>
+            <p>In Tune Again has been serving the Austin music community's guitar and amp repair needs for over twelve years. With years of experience performing countless repairs for retail stores, local luthiers as well as professional touring backline companies, In Tune Again has experience working with every major brand as well as many boutique brands. Just bought a new guitar? Unlock its full potential with a basic setup (starting at $45). Unhappy with your tone? In Tune Again will fix that with a professional installation of the pickups of your choice! If you are tired of buzzing, humming, noisy guitars and amps, In Tune Again has the cure. We also service, modify as well as custom build vacuum tube amps of any type. We can repair other electronics as well, such as electric pianos, keyboards, DJ gear, mixers, even PC's. Competitive rates with a quick turnaround. Call (512)627-0480, or click the e-mail icon at the top of the screen to schedule a repair!</p>
+            <ul>
+                <li>Setups</li>
+                <li>Fret polishing</li>
+                <li>Pickup swaps</li>
+                <li>Electronic mods</li>
+                <li>Amp retubing</li>
+                <li>Amp and pedal repair</li>
+                <li>General electronics repair</li>
+            </ul>
+        </section>
+        <!--photo gallery-->
+        <section id="gallery" class="images noto">
+            <h1>Gallery</h1>
+            <div class="row">
+                <div class="column">
+                    <img src="img/69bassman.jpg" style="width:100%;">
+                    <img src="img/69bassman_guts.jpg" style="width:100%;">
+                    <img src="img/814_fretboardclean.jpg" style="width:100%;">
+                    <img src="img/ac30_handwired.jpg" style="width:100%;">
+                    <img src="img/amp_spread.jpg" style="width:100%;">
+                    <img src="img/ampshop_1.jpg" style="width:100%;">
+                    <img src="img/ba115_mosfet.jpg" style="width:100%;">
+                    <img src="img/bassmaster_custom.jpg" style="width:100%;">
+                    <img src="img/blown_signalcap.jpg" style="width:100%;">
+                    <img src="img/charbroil.jpg" style="width:100%;">
+                </div>
+                <div class="column">
+                    <img src="img/deville_recap.jpg" style="width:100%;">
+                    <img src="img/epigibson_shootout.jpg" style="width:100%;">
+                    <img src="img/fader_repair.jpg" style="width:100%;">
+                    <img src="img/rane_fader.jpg" style="width:100%;">
+                    <img src="img/fretpolish_1.jpg" style="width:100%;">
+                    <img src="img/fretpolish_2.jpg" style="width:100%;">
+                    <img src="img/gtr_wiring.jpg" style="width:100%;">
+                    <img src="img/jayturser_wiring.jpg" style="width:100%;">
+                    <img src="img/jcm800_demod.jpg" style="width:100%;">
+                    <img src="img/jetcity_jca20h_mod.jpg" style="width:100%;">
+                </div>
+                <div class="column">
+                    <img src="img/jtm45_reissue.jpg" style="width:100%;">
+                    <img src="img/kool_backline.jpg" style="width:100%;">
+                    <img src="img/legend_a30.jpg" style="width:100%;">
+                    <img src="img/mars_custom.jpg" style="width:100%;">
+                    <img src="img/matchless_dc30.jpg" style="width:100%;">
+                    <img src="img/motif_psrepair.jpg" style="width:100%;">
+                    <img src="img/mustang_bass_77.jpg" style="width:100%;">
+                    <img src="img/peavey_classics.jpg" style="width:100%;">
+                    <img src="img/pv_transtube.jpg" style="width:100%;">
+                    <img src="img/rane_fader.jpg" style="width:100%;">
+                </div>
+                <div class="column">
+                    <img src="img/recap_mobo.jpg" style="width:100%;">
+                    <img src="img/rhodes.jpg" style="width:100%;">
+                    <img src="img/silverface_bias.jpg" style="width:100%;">
+                    <img src="img/silverface_guts.jpg" style="width:100%;">
+                    <img src="img/stringwinding_pro.jpg" style="width:100%;">
+                    <img src="img/svt_board.jpg" style="width:100%;">
+                    <img src="img/svt_vintage.jpg" style="width:100%;">
+                    <img src="img/tele_pro_deluxe.jpg" style="width:100%;">
+                    <img src="img/telepolish_1.jpg" style="width:100%;">
+                    <img src="img/trace_repair.jpg" style="width:100%;">
+                </div>
+            </div>
         </section>
     </main>
 </body>
