Updated for 16:9 resolution

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -82,12 +82,21 @@
         <section class="dog_pictures">
             <div class="dog">
                 <img class="dog_img" src="img/dog1.jpg" alt="dog1">
+                <div class="img_text">
+                    Louie has a frisbee addiction but is working through it 
+                </div> 
             </div>
             <div class="dog">
                 <img class="dog_img" src="img/dog5.jpg" alt="dog2">
+                <div class="img_text">
+                    Spot is into digging and pretending to be a dalmatian
+                </div> 
             </div>
             <div class="dog">
                 <img class="dog_img" src="img/dog4.jpg" alt="dog3">
+                <div class="img_text">
+                    Sam enjoys long runs and protecting his yard
+                </div> 
             </div>
         </section>
         <!-- End Contains Pictures of Dogs -->
@@ -101,13 +110,13 @@
                 Contact Us
             </div>
             <div class="footer_contact_list">
-                Address: 555 Thisisastreet, Austin TX 78704
+                Address: 10 RentaStr, Austin TX 78704
             </div>
             <div class="footer_contact_list">
                 Phone: 555-555-5555
             </div>
             <div class="footer_contact_list">
-                Email: Support@somecompany.com
+                Email: Support@rentadog.com
             </div>
         </section>
 
@@ -125,16 +134,6 @@
                 Safety
             </div>
         </section>
-
-        <section class="footer_sections">
-            <div class="footer_header">
-                Open Positions
-            </div>
-            <div class="footer_careers_list">
-                Contact: Careers@rentadog.com
-            </div>
-        </section>
-
         <section class="footer_sections">
             <div class="footer_header">
                 Social Media
