created checkpoint page

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,80 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Darla Lea - Realtor</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Allura|Libre+Baskerville" rel="stylesheet">
+</head>
+<body>
+    <!-- header -->
+    <header>
+        <h1>Darla Lea</h1>
+        <img src="img/logo.png" alt="henry hinds logo" class="logo">
+        <nav>
+            <a href="">Home</a>
+            <a href="">Communities</a>
+            <a href="">Sell</a>
+            <a href="">Buy</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+        </nav>
+    </header>
+    <div class="container">
+        <!-- section for buying homes -->
+        <div class="buycontainer">
+            <section class="buy"> 
+                <h2 class="buyheading">Search for your next home</h2>
+                <div class="buybox">
+                    <input type="text" class="buyaddress" placeholder="Where would you like to live?" class="search">
+                    <select class="small" class="search">
+                        <option>Single Family</option>
+                        <option>Multi Family</option>
+                        <option>Condo</option>
+                        <option>Apartment</option>
+                    </select>
+                    <input type="number" placeholder="Beds" class="small" class="search">
+                    <input type="number" placeholder="Baths" class="small" class="search">
+                    <input type="number" placeholder="$" class="small" class="search">
+                    <input type="number" placeholder="$$$" class="small" class="search">
+                    <input type="submit" placeholder="Search" class="small" class="search">
+                </div>
+            </section>
+        </div>
+            <!-- section for selling homes -->
+        <div class="sellcontainer">
+            <section class="eval">
+                <h2 class="sellheading">What is your home worth?</h2>
+                <p class="selltagline">Professional appraisal by Darla Lea</p>
+                <div class="sellbox">
+                    <input type="address" placeholder="Enter your address" class="selladdress" class="search">
+                    <input type="submit" class="sellsearch" class="search">
+                </div>
+            </section>
+        </div>
+            <!-- section for featured listings -->
+        <div class="listingcontainer">
+            <section class="featuredlistings">
+                <h2 class="listingheading">Featured Listings</h2>
+                <div class="listings">
+                    <div class="listing1" class="listing">
+                        <img src="img/home1.jpg" alt="home" class="pic">
+                        <p class="listingtext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus quidem explicabo laborum blanditiis provident sunt dolorum, voluptas quisquam ut </p>
+                    </div>
+                    <div class="listing2" class="listing">
+                        <img src="img/home2.jpg" alt="home" class="pic">
+                        <p class="listingtext">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium odit at hic ipsa libero voluptatum quidem, ad minima doloremque quis, voluptates</p>
+                    </div>
+                    <div class="listing3" class="listing">
+                        <img src="img/home3.jpg" alt="home" class="pic">
+                        <p class="listingtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit quidem id qui fugit, est similique dolorem tenetur non, dolor maxime!</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+</body>
+</html>
