fixed anchor links partially hiding under static header

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sound Guy Envy</title>
+    <title>In Tune Again Guitar and Amp Repair Austin TX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
@@ -34,11 +34,11 @@
         </div>
         <!--nav links-->
         <div class="switches flexrow">
-            <a class="power" href="#about">
+            <a class="power" href="#aboutnav">
                 <img src="img/power_switch.jpg">
                 <p class="imglink noto">About</p>
             </a>
-            <a class="standby" href="#gallery">
+            <a class="standby" href="#gallerynav">
                 <img src="img/standby_switch.jpg">
                 <p class="imglink noto">Gallery</p>
             </a>
@@ -53,6 +53,9 @@
         </section>
         <!--About me-->
         <section id="about" class="noto">
+            <div class="anchor">
+                <a name="aboutnav">&nbsp;</a>
+            </div>
             <h1>Services</h1>
             <p>In Tune Again has been serving the Austin music community's guitar and amp repair needs for over twelve years. With years of experience performing countless repairs for retail stores, local luthiers as well as professional touring backline companies, In Tune Again has experience working with every major brand as well as many boutique brands. Just bought a new guitar? Unlock its full potential with a basic setup (starting at $45). Unhappy with your tone? In Tune Again will fix that with a professional installation of the pickups of your choice! If you are tired of buzzing, humming, noisy guitars and amps, In Tune Again has the cure. We also service, modify as well as custom build vacuum tube amps of any type. We can repair other electronics as well, such as electric pianos, keyboards, DJ gear, mixers, even PC's. Competitive rates with a quick turnaround. Call (512)627-0480, or click the e-mail icon at the top of the screen to schedule a repair!</p>
             <ul>
@@ -67,6 +70,9 @@
         </section>
         <!--photo gallery-->
         <section id="gallery" class="images noto">
+            <div class="anchor">
+                <a name="gallerynav">&nbsp;</a>
+            </div>
             <h1>Gallery</h1>
             <div class="row">
                 <div class="column">
