--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="css/reset.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>MediCenter</title>
+</head>
+<body>
+    <header>
+        <img src="/Users/andrewsommer/Desktop/ACA Projects/Beginner /Checkpoint 1/Images/logo.png" alt="logo">
+        <div class="social">
+            <button><a href="https://www.facebook.com/MediCenterPharmacy" class="fa fa-facebook"></a></button>
+            <button><a href="https://plus.google.com/109728116946286930413" class="fa fa-google"></a></button>
+        </div>
+        <p>Big enough to meet <span>your</span> needs. Small enough to know <span>your</span> name.</p>
+        <div class="header_buttons">
+            <ul>
+            <li id="medicenter_button"><button>My Medicenter</button></li>
+            <li id ="refills_button"><button>Refills</button></li>
+            </ul>
+         </div>
+    </header>
+    <nav>
+        <ul>
+        <li><a href="http://www.mymedicenterpharmacy.com/">Locations</a></li>
+        <li><a href="http://www.medicenterpharmacy.com/general-services/">Services</a></li>
+        <li><a href="http://www.medicenterpharmacy.com/our-programs/">Porgrams</a></li>
+        <li><a href="http://www.medicenterpharmacy.com/compounding/">Compounding</a></li>
+        <li><a href="http://www.medicenterpharmacy.com/drug-info/">Drug Info</a></li>
+        <li><a href="http://www.medicenterpharmacy.com/drug-info/">Testimonials</a></li>
+        <li><a href="http://www.medicenterpharmacy.com/Contact-Us/">Contact Us</a></li>
+        </ul>
+    </nav>
+    <main class="row">
+        <section class="column left">
+            <p>MediCenter is Cape Girardeau and Jackson’s locally owned and operated pharmacy. We make a commitment to our customers to ensure you receive prescriptions as your healthcare provider prescribes; your prescriptions are ready in a timely manner, usually fifteen minutes or less if you choose to wait; and you are welcomed and treated with a smile you would expect from a friend.  Our experienced pharmacist and staff welcome all questions, as our goal is to provide the support and advise so that your overall health and wellbeing is optimized in your daily life and actions.  Expect more from a pharmacy when you choose MediCenter Pharmacy. </p>
+        </section>
+        <section class="column middle">
+            <img src="/Users/andrewsommer/Desktop/ACA Projects/Beginner /Checkpoint 1/Images/pharmacy.jpeg" alt="Pharmacy">
+            <img src="/Users/andrewsommer/Desktop/ACA Projects/Beginner /Checkpoint 1/Images/Flu_Shots_18.png" alt="Flu Shots">
+        </section>
+        <section class="column right">
+            <article>
+                <button id="delivery_button"><a href="http://www.medicenterpharmacy.com/general-services/"/>Lean about our FREE DELIVERY!</button>
+            </article>
+            <article class="news">
+                <h2>NEWS</h2>
+                <img src="/Users/andrewsommer/Desktop/ACA Projects/Beginner /Checkpoint 1/Images/flushot1.jpg" alt="Flu Shot News">
+                <p>The Standard Flu Vaccine vs. The High Dose Vaccine <br>With age comes a great many things: wisdom, maturity, beauty… And also a weaker immune system! This places ...</p>
+                <button><a href="http://www.medicenterpharmacy.com/blog/2018/the-standard-flu-vaccine-vs-the-high-dose-vaccine">Keep Reading!</button>
+                <img src="/Users/andrewsommer/Desktop/ACA Projects/Beginner /Checkpoint 1/Images/beattheheat.png" alt="Beat the Heat">
+                <p>After a long, cold winter, we are all looking forward to spending some much needed time outdoors and ...</p>
+                <button><a href="http://www.medicenterpharmacy.com/blog/2018/beating-the-heat-this-summer"></a> Keep Reading! </button>
+            </article>
 
+        </section>
+    </main>
+    <footer>
+        <p>&copy Medicenter Pharmacy | info@medicenterpharmacy.com | HIPPA Notice Cape | Hippa Jackson</p>
+    </footer>
+
+</body>
+</html>
