checkpoint one page

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,51 @@
-
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title> Barking Beak </title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Quicksand" rel="stylesheet">
+    
+</head>
+<body>
+    <header>
+        <span> 
+            <img src="images/pet-house.png" alt="logo" >   
+        </span> 
+        <h1>
+            Barkin' Beak Pet Sitting 
+        </h1>
+        <span>
+            <nav class= credentials >
+                <p> Login </p>
+                <p> Register </p>
+            </nav>
+        </span>
+    </header>
+    <div class= dog >
+        <img  class= dogimage src="images/dog.jpg" alt="dog">
+        <div class=maintext>
+            <p>
+                Need a pet sitter?
+            </p>
+        </div>
+        <div class =subtext>
+            <p>
+                Find a local pet sitter near you.
+            </p>
+        </div>
+        <div class= overdog>
+            <input class= zipcode type="text" placeholder="Enter Your Zipcode">
+            <input class= zipcodesubmit type="button" value="Submit!">
+        </div>
+        <div class=socialmedia >
+                <a href="https://en.wikipedia.org/wiki/Facebook"> <img src="images/face_book.png"> </a>
+                <a href="https://en.wikipedia.org/wiki/Instagram"> <img src="images/instagram.png"> </a>
+                <a href="https://en.wikipedia.org/wiki/Twitter"> <img src="images/twitter.png"> </a>
+         </div>
+    </div>
+   
+</body>
+</html>
