--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -53,6 +53,7 @@
         </section>
         <!--About me-->
         <section id="about" class="noto">
+            <!--anchor for link to clear header-->
             <div class="anchor">
                 <a name="aboutnav">&nbsp;</a>
             </div>
@@ -70,6 +71,7 @@
         </section>
         <!--photo gallery-->
         <section id="gallery" class="images noto">
+            <!--anchor for link to clear header-->
             <div class="anchor">
                 <a name="gallerynav">&nbsp;</a>
             </div>
