update text box and button in NASA project

--- a/04week/nasa/index.html
+++ b/04week/nasa/index.html
@@ -34,10 +34,10 @@
         <article>
             <div class="art_header">CONTACT US</div>
             <div>Name</div>
-            <div class="name_box"></div>
+            <input type="text" class="name_box" placeholder="">
             <div>Message</div>
-            <div class="message_box"></div>
-            <div class="send_box">send</div>
+            <input type="text" class="message_box" placeholder="">
+            <button type="button" class="send_box">send</button>
         </article>
     </section>
 </body>
