--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,60 @@
+<!doctype <!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Travel-Gram</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+    <script src="main.js"></script>
+</head>
+
+<body>
+
+<div class="grid">
+    <div class="container1">
+        <div class="box box1"><img src="images/pig.jpg">Box 1 Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Atque debitis odio saepe! Molestiae velit inventore animi quae tenetur debitis deleniti nihil
+            perspiciatis a, quis quidem unde excepturi laudantium, quod maxime!</div>
+        <div class="box box2"><img src="images/pig.jpg">Box 2 Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. At dicta facilis accusamus ducimus, hic repellendus ratione harum! Enim vitae quam iusto ea quo
+            voluptas et. Atque ullam autem nemo. Quia.</div>
+    </div>
+
+    <div class="container2">
+        <div class="box box3"><img src="images/pig.jpg"><p>Box 3 Lorem ipsum dolor sit amet
+            consectetur adipisicing
+            elit. Error delectus quidem repellat. Minima, accusamus impedit. Sunt, eius inventore consequuntur
+            repellendus omnis esse tenetur eaque, cumque fugit, modi maiores ut nam!</p></div>
+        <div class="box box4"><img src="images/pig.jpg"><p>Box 4 Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Neque tempora possimus eum ipsum ut quasi cum beatae culpa! Maiores, beatae dolorum? Qui,
+            voluptatibus! Hic debitis, eum in inventore voluptate et.</p></div>
+        <div class="box box5"><img src="images/pig.jpg"><p>Box 5 Lorem ipsum, dolor sit amet consectetur adipisicing
+            elit. Vitae debitis quo, ipsum necessitatibus nostrum corporis tempora ducimus dolores maxime veritatis
+            et sed velit quis obcaecati consequatur enim, odit corrupti. Cum.</p></div>
+    </div>
+
+    <div class="container3">
+        <div class="box box6"><img src="images/pig.jpg"><p>Box 6 Lorem ipsum, dolor sit amet consectetur adipisicing
+            elit. Eveniet, reiciendis nemo ipsa, neque vitae, molestiae nulla consequuntur veniam tempore aut
+            voluptas? In facere commodi natus a dicta ab libero odit?</p></div>
+        <div class="box box7"><img src="images/pig.jpg"><p>Box 7 Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Voluptates nam consequuntur iure quis dolor iste in earum temporibus quidem libero mollitia
+            debitis quasi rem, ipsum et cumque dolores saepe doloremque.</p></div>
+        <div class="box box8"><img src="images/pig.jpg"><p>Box 8 Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Alias aliquam sapiente saepe aspernatur, fugiat dignissimos totam fuga repellat rerum vitae
+            asperiores vero aperiam harum deleniti qui corporis nulla pariatur cumque.</p></div>
+        <div class="box box9"><img src="images/pig.jpg"><p>Box 7 Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Voluptates nam consequuntur iure quis dolor iste in earum temporibus quidem libero mollitia
+            debitis quasi rem, ipsum et cumque dolores saepe doloremque.</p></div>
+        <div class="box box10"><img src="images/pig.jpg"><p>Box 8 Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Alias aliquam sapiente saepe aspernatur, fugiat dignissimos totam fuga repellat rerum vitae
+            asperiores vero aperiam harum deleniti qui corporis nulla pariatur cumque.</p></div>
+    </div>
+</div>
+
+
+</body>
+
+</html>
