working on transitions

--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="column">
+    <div class="trigger">
         <div class="box1"></div>
         <div class="box2"></div>
         <div class="box3"></div>
@@ -25,6 +25,7 @@
         <div class="box11"></div>
         <div class="box12"></div>
     </div>
+    
 </body>
 
 </html>
