--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -4,55 +4,134 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Travel-Gram</title>
+    <title>PNN - Pig News Now</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="reset" href="css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <script src="main.js"></script>
 </head>
 
+
 <body>
-
-<div class="grid">
-    <div class="container1">
-        <div class="box box1"><img src="images/pig.jpg">Box 1 Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Atque debitis odio saepe! Molestiae velit inventore animi quae tenetur debitis deleniti nihil
-            perspiciatis a, quis quidem unde excepturi laudantium, quod maxime!</div>
-        <div class="box box2"><img src="images/pig.jpg">Box 2 Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. At dicta facilis accusamus ducimus, hic repellendus ratione harum! Enim vitae quam iusto ea quo
-            voluptas et. Atque ullam autem nemo. Quia.</div>
+    <div class="header" role="banner">
+        <h1>PNN - Pig News Now</h1> 
+        <p><img src="images/pignews.jpg"> | <b>November 2018</b> </p> 
     </div>
 
-    <div class="container2">
-        <div class="box box3"><img src="images/pig.jpg"><p>Box 3 Lorem ipsum dolor sit amet
-            consectetur adipisicing
-            elit. Error delectus quidem repellat. Minima, accusamus impedit. Sunt, eius inventore consequuntur
-            repellendus omnis esse tenetur eaque, cumque fugit, modi maiores ut nam!</p></div>
-        <div class="box box4"><img src="images/pig.jpg"><p>Box 4 Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Neque tempora possimus eum ipsum ut quasi cum beatae culpa! Maiores, beatae dolorum? Qui,
-            voluptatibus! Hic debitis, eum in inventore voluptate et.</p></div>
-        <div class="box box5"><img src="images/pig.jpg"><p>Box 5 Lorem ipsum, dolor sit amet consectetur adipisicing
-            elit. Vitae debitis quo, ipsum necessitatibus nostrum corporis tempora ducimus dolores maxime veritatis
-            et sed velit quis obcaecati consequatur enim, odit corrupti. Cum.</p></div>
-    </div>
+    <div class="main-container">
 
-    <div class="container3">
-        <div class="box box6"><img src="images/pig.jpg"><p>Box 6 Lorem ipsum, dolor sit amet consectetur adipisicing
-            elit. Eveniet, reiciendis nemo ipsa, neque vitae, molestiae nulla consequuntur veniam tempore aut
-            voluptas? In facere commodi natus a dicta ab libero odit?</p></div>
-        <div class="box box7"><img src="images/pig.jpg"><p>Box 7 Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Voluptates nam consequuntur iure quis dolor iste in earum temporibus quidem libero mollitia
-            debitis quasi rem, ipsum et cumque dolores saepe doloremque.</p></div>
-        <div class="box box8"><img src="images/pig.jpg"><p>Box 8 Lorem ipsum dolor sit amet, consectetur adipisicing
-            elit. Alias aliquam sapiente saepe aspernatur, fugiat dignissimos totam fuga repellat rerum vitae
-            asperiores vero aperiam harum deleniti qui corporis nulla pariatur cumque.</p></div>
-        <div class="box box9"><img src="images/pig.jpg"><p>Box 7 Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Voluptates nam consequuntur iure quis dolor iste in earum temporibus quidem libero mollitia
-            debitis quasi rem, ipsum et cumque dolores saepe doloremque.</p></div>
-        <div class="box box10"><img src="images/pig.jpg"><p>Box 8 Lorem ipsum dolor sit amet, consectetur adipisicing
-            elit. Alias aliquam sapiente saepe aspernatur, fugiat dignissimos totam fuga repellat rerum vitae
-            asperiores vero aperiam harum deleniti qui corporis nulla pariatur cumque.</p></div>
+        <div class="group1">
+            <!-- box1 -->
+            <div class="box box1">
+                <div class="apple"><img src="images/pig1.jpg"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!--/box1 -->
+
+            <!-- box2 -->
+            <div class="box box2">
+                <div class="apple"><img src="images/pig2.jpg"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!-- /box2 -->
+        </div>
+
+        <!-- --------------------------------------------- -->
+
+        <div class="group2">
+            <!-- box3 -->
+            <div class="box box3">
+                <div class="apple"><img src="images/pig3.jpg"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!-- /box3 -->
+
+            <!-- box4 -->
+            <div class="box box4">
+                <div class="apple"><img src="images/pig4.jpg"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!-- /box4 -->
+
+            <!-- box5 -->
+            <div class="box box5">
+                <div class="apple"><img src="images/pig5.jpg"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!-- /box5 -->
+
+            <!-- box6 -->
+            <div class="box box6">
+                <div class="apple"><img src="images/pig6.jpg"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!-- /box6 -->
+        </div>
+
+        <!-- --------------------------------------------- -->
+
+        <div class="group3">
+            <!-- box7 -->
+            <div class="box box7">
+                <div class="apple"><img src="images/pig7.jpg"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!-- /box7 -->
+
+            <!-- box8 -->
+            <div class="box box8">
+                <div class="apple"><img src="images/pig8.jpg"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!-- /box8 -->
+
+            <!-- box9 -->
+            <div class="box box9">
+                <div class="apple"><img src="images/pig9.png"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!-- /box9 -->
+
+            <!-- box10 -->
+            <div class="box box10">
+                <div class="apple"><img src="images/pig10.png"></div>
+                <div class="banana">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam maxime porro saepe
+                    quidem voluptatibus tenetur accusamus sequi provident nemo dolores non nihil natus corporis eaque,
+                    iusto neque, atque molestiae officiis.</div>
+                <div class="corn"><a href="#">read more...</a></div>
+            </div>
+            <!-- /box10 -->
+        </div>
+
+
     </div>
-</div>
 
 
 </body>
