--- a/04week/tomorrows-technology/index.html
+++ b/04week/tomorrows-technology/index.html
@@ -10,9 +10,18 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+
 
 </head>
 <body>
-    
+    <div class="container">
+        <img src="img/bg.jpg">
+        <section>
+            <h1>Tomorrow's Technology, Yesterday's Insights</h1>
+            <p>Sometimes what the tech world comes up with has already been tried and rejected and really doesn't need to be resurrected--like the Taylorist view...</p>
+            <button>Technology</button>
+        </section>
+    </div>
 </body>
 </html>
