--- a/04week/tomorrows-technology/index.html
+++ b/04week/tomorrows-technology/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -22,6 +22,36 @@
             <p>Sometimes what the tech world comes up with has already been tried and rejected and really doesn't need to be resurrected--like the Taylorist view...</p>
             <button>Technology</button>
         </section>
+        <footer class="mobile">
+            <div class="links">
+                <h1>Useful Links</h1>
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Jobs</a></li>
+                    <li><a href="">Team</a></li>
+                    <li><a href="">Advertise</a></li>
+                    <li><a href="">Terms</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <h1>Social Media</h1>
+                <ul>
+                    <li><a href="">Facebook</a><i class="fa fa-facebook"></i></li>
+                    <li><a href="">Instagram</a><i class="fa fa-instagram"></i></li>
+                    <li><a href="">Twitter</a><i class="fa fa-twitter"></i></li>
+                </ul>
+
+            </div>
+        </footer>
     </div>
+    <aside class="stories">
+        <h1>TOP STORIES</h1>
+        <ul>
+            <li><a href="">Stanford Researchers Make Artificial Skin That Senses Touch</a></li>
+            <li><a href="">3 New Ways to Wear Your New Chambray Shirt</a></li>
+            <li><a href="">Where to Buy Your Next Rug</a></li>
+            <li><a href="">Chukkas that Offer Casual, Comfortable Style</a></li>
+        </ul>
+    </aside>
 </body>
 </html>
