--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,64 @@
-
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Red Baron Speed Shop</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./css/reset.css"/>
+    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="main.js"></script>
+</head>
+<body>
+    <Header>
+        <div class="shipping">FREE SHIPPING ON ORDERS OVER $99</div>
+        <div class="nav">
+            <img class="logo" src="img/red_baron_logo.jpg">
+            <nav>
+                <a href="contact">CONTACT</a>
+                <a href="gallery">GALLERY</a>
+                <a href="gear">GEAR</a>
+                <a href="services">SERVICES</a>
+                <a href="about">ABOUT</a>
+                <a href="home">HOME</a>
+            </nav>
+        </div>
+    </Header>
+    <main>
+        <img class="cb" src="img/cb350.jpg">
+        <section>
+            <div><h1>About</h1></div>
+                <P class="about">The Red Baron Speed Shop and Coffee came from the founder's love for fast machines and quality coffee. We work on all makes of cars and motorcycles with our specialty in custom metal and leather fabrication.The 1700sqft show room is integrated with a coffee shop in a steampunk industrial style. Our gear is made with the highest quality of leaders for durability, confort and style. The coffee we serve is grown in the Texas Hill Country and blessed by the hot Texas sun, and our shop talent is some of the best that Capital City has to offer. If you are looking for quality leathers, reliable service and good tastin' coffee pay us a visit. </P>
+        </section>
+        <section><h1>Gear</h1>
+            <div class="sale_items">
+                <ul>
+                <li><img src="img/seat.jpg"><br>Cafe Racer Seat<br>$80.00</li>
+                <li><img src="img/goggles.jpg"><br>Aviator Goggles<br>$24.99</li> 
+                <li><img src="img/wheel.jpg"><br>Momo Prototipo Leather Steering Wheel<br>$260.00</li>
+                <li><img src="img/shift_knob.jpg"><br>Hurst Shift Knob<br>$24.00</li>
+                <li><img src="img/gloves.jpg"><br>Black Leather Riding/Driving Gloves<br>$99.00</li>
+                <li><img src="img/key_fob.jpg"><br>Leather MG Key Chain<br>$12.</li>
+                </ul>
+            </div>
+        </section>
+        <section><h1>Gallery</h1>
+            <li class="img"><img src="img/corolla.jpg"><br>Corolla</li>
+            <li class="img"><img class src="img/cb400.jpg"><br>Honda CB400 Cafe</li>
+            <li class="img"><img class src="img/cb650.jpg"><br>Honda CB650 Cafe</li>
+        </section>
+        <section><h1>Contact</h1>
+            <div>The Red Baron<br>4300 CHarlemagne Court<br>Austin, Texas 78727<br>ph:512-766-7676<br>email: <a href="info@redbaron.com"></a></div>
+        </section>
+        <section><h1>Social</h1>
+            <div class="social">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-pinterest"></a>
+        </section>
+    </main>  
+</body>
+<footer>2018 Created by Leo Gracia</footer>
+</html>
